--- a/detekt.yml
+++ b/detekt.yml
@@ -67,7 +67,7 @@ comments:
     active: false
 
 complexity:
-  active: false # TODO true
+  active: true
   ComplexCondition:
     active: true
     threshold: 4
@@ -84,10 +84,10 @@ complexity:
     active: false
   LargeClass:
     active: true
-    threshold: 150
+    threshold: 200
   LongMethod:
     active: true
-    threshold: 20
+    threshold: 30
   LongParameterList:
     active: true
     threshold: 6
@@ -106,11 +106,11 @@ complexity:
     ignoreStringsRegex: '$^'
   TooManyFunctions:
     active: true
-    thresholdInFiles: 11
-    thresholdInClasses: 11
-    thresholdInInterfaces: 11
-    thresholdInObjects: 11
-    thresholdInEnums: 11
+    thresholdInFiles: 30
+    thresholdInClasses: 30
+    thresholdInInterfaces: 30
+    thresholdInObjects: 30
+    thresholdInEnums: 30
     ignoreDeprecated: false
     ignorePrivate: false
 
@@ -256,7 +256,7 @@ formatting:
     active: true
     autoCorrect: true
   NoWildcardImports:
-    active: false # TODO true
+    active: false
     autoCorrect: true
   PackageName:
     active: true
@@ -360,7 +360,7 @@ performance:
   ForEachOnRange:
     active: true
   SpreadOperator:
-    active: false # TODO true
+    active: true
   UnnecessaryTemporaryInstantiation:
     active: true
 
@@ -439,8 +439,8 @@ style:
   MandatoryBracesIfStatements:
     active: false
   MaxLineLength:
-    active: false # TODO true
-    maxLineLength: 120
+    active: true
+    maxLineLength: 160
     excludePackageStatements: true
     excludeImportStatements: true
     excludeCommentStatements: false
@@ -509,5 +509,5 @@ style:
   VarCouldBeVal:
     active: false
   WildcardImport:
-    active: false # TODO true
+    active: false
     excludeImports: 'java.util.*,kotlinx.android.synthetic.*'
