--- a/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
+++ b/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3"
 services:
   dispatcher:
-    image: mierzwid/dispatcher:0.0.3
+    image: mierzwid/httpd4dispatcher:0.0.1
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
     ports:
-    - "80:80"
+      - "80:80"
     networks:
-    - docker-net
+      - docker-net
     volumes:
-      - "./dispatcher/conf:/etc/httpd/conf"
+      - "./build/distributions/mod_dispatcher.so:/etc/httpd/modules/mod_dispatcher.so"
       - "./build/cache:/opt/aem/dispatcher/cache"
       - "./build/logs:/var/log/httpd"
+      - "./dispatcher/conf:/etc/httpd/conf"
 networks:
   docker-net:
