--- a/detekt.yml
+++ b/detekt.yml
@@ -193,7 +193,7 @@ formatting:
   Filename:
     active: true
   FinalNewline:
-    active: true
+    active: false
     autoCorrect: true
   ImportOrdering:
     active: false
