--- a/.azure-pipelines/release.yml
+++ b/.azure-pipelines/release.yml
@@ -3,6 +3,8 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
+name: 'Release'
+
 trigger:
 - master
 
